--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Kas Valgyt</string>
     <string name="daugiau">Daugiau</string>
+    <string name="denied_rational">Norim surasti pietu pasiūlymus arti tavęs.</string>
+    <string name="settings">Nustatymai</string>
 </resources>
